# TrueTalent-PruebaTecnica

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.allinone  README.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/middlewares/: error_handler.py  request_logger.py
backend/app/application/dtos/: assistant_dto.py  rpa_extraction_dto.py  transaction_dto.py
backend/app/application/use_cases/: create_rpa_extraction.py  create_transaction.py  get_ai_mode.py  process_transaction_async.py  set_ai_mode.py  summarize_text.py
backend/app/core/: config.py  dependencies.py  logging.py  security.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: assistant_log.py  rpa_extraction.py  transaction.py
backend/app/domain/interfaces/: ai_mode_repository.py  ai_service.py  assistant_log_repository.py  queue_service.py  rpa_extraction_repository.py  transaction_repository.py
backend/app/infrastructure/ai/: mock_service.py  openai_service.py  redis_ai_mode_repository.py
backend/app/infrastructure/db/: base.py  session.py
backend/app/infrastructure/queue/: redis_client.py  redis_queue.py  transaction_events.py
backend/app/infrastructure/websocket/: connection_manager.py  redis_listener.py
backend/app/worker/: transaction_worker.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_assistant_api.py  test_rpa_api.py  test_transactions_api.py  test_websocket_api.py
backend/tests/unit/core/: test_dependencies.py
backend/tests/unit/use_cases/: test_ai_mode.py  (+3 more)
(+75 files in other folders)
